# us-libraries

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  Untitled.ipynb  pyproject.toml  pyrightconfig.json  pytest.ini  scratch.py
.github/workflows/: ci.yml  release.yml  staging.yml
data/: urls.json
tests/: conftest.py  service_test_fixtures.py  utils.py
tests/integration/: expected_stat_columns.py  us_libraries_test.py  us_pls_test.py
typings/bs4/: __init__.pyi  dammit.pyi  diagnose.pyi  element.pyi  formatter.pyi  testing.pyi
typings/callee/: __init__.pyi  _compat.pyi  attributes.pyi  base.pyi  collections.pyi  functions.pyi  general.pyi  numbers.pyi  objects.pyi  operators.pyi  strings.pyi  types.pyi
typings/expects/: __init__.pyi  _compat.pyi  aliases.pyi  expectations.pyi  factory.pyi  testing.pyi  texts.pyi
typings/pdfminer/: __init__.pyi  arcfour.pyi  ascii85.pyi  ccitt.pyi  cmapdb.pyi  converter.pyi  encodingdb.pyi  fontmetrics.pyi  glyphlist.pyi  high_level.pyi  image.pyi  jbig2.pyi  latin_enc.pyi  layout.pyi  lzw.pyi  pdfcolor.pyi  pdfdevice.pyi  pdfdocument.pyi  pdffont.pyi  pdfinterp.pyi  pdfpage.pyi  pdfparser.pyi  pdftypes.pyi  psparser.pyi  runlength.pyi  settings.pyi  utils.pyi
typings/punq/: __init__.pyi  _compat.pyi
typings/tabula/: __init__.pyi  file_util.pyi  io.pyi  template.pyi  util.pyi
us_libraries/: __init__.py  _client.py  _config.py  libraries.py
us_libraries/_cache/: interface.py  on_disk_cache.py
us_libraries/_download/: download_service.py  models.py
us_libraries/_logger/: factory.py  (+3 more)
us_pls/: _client.py
(+54 files in other folders)
