[tool.poetry]
name = "us-libraries"
version = "0.1.0"
description = ""
authors = ["Joel Krim <drawjk705@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.1"
requests = "^2.25.1"
tabula-py = "^2.2.0"
punq = "^0.4.1"
"pdfminer.six" = "^20201018"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
isort = "^5.7.0"
pytest-clarity = "^0.3.0-alpha.0"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
